--- a/style.css
+++ b/style.css
@@ -20,20 +20,17 @@
   width: 100%;
   height: 100px;
   border-top: 1px solid #eaeaea;
-  display: flex;
   justify-content: center;
   align-items: center;
+}
+.footer a{
+  color: #0070f3;
 }
 
 .footer img {
   margin-left: 0.5rem;
 }
 
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
 .title a {
   color: #0070f3;
@@ -87,7 +84,6 @@
   padding: 1.5rem;
   text-align: left;
   color: inherit;
-  text-decoration: none;
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
