--- a/global.css
+++ b/global.css
@@ -1,18 +1,83 @@
 html,
 body {
-	
 	font-size: 14pt;
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  	padding: 0;
+  	margin: 0;
+  	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
+a{
   color: inherit;
   text-decoration: none;
 }
-
-* {
-  box-sizing: border-box;
+a:hover{
+	color: blue;
 }
+
+#linha{
+	width: 960px;
+	margin: 0 auto;
+	overflow: auto;
+	padding: 5px 0;
+}
+
+.coluna{
+	float: left;
+	padding: 0 10px;
+}
+.col1{
+	width: 60px;
+	background-color:
+	text-align: center;
+
+}
+.col2{
+	width: 140px;
+	
+}
+.col3{
+	width: 220px;
+	text-align: center;
+	
+}
+.col4{
+	width: 300px;
+	background-color:
+	
+}
+.col5{
+	width: 380px;
+	
+}
+.col6{
+	width: 460px;
+	
+}
+.col7{
+	width: 540px;
+	
+}
+.col8{
+	width: 620px;
+	background-color:
+	
+}
+.col9{
+	width: 700px;
+	
+}
+.col10{
+	width: 780px;
+	
+}
+.col11{
+	width: 860px;
+	background-color;
+	text-align: center;
+}
+.col12{
+	width: 940px;
+	
+}
+
